# TargetWindowHider

./: CMakeLists.txt  README.md  main.cpp
Module/: AutoRun.cpp  Bar.cpp  GetHardwareInfo.cpp  GetWindowInfo.cpp  WindowSet.cpp
lib/: CheckData.cpp  CheckData.h  Clock.cpp  Clock.h  Json.h  JsonRW.cpp  JsonRW.h  WatchDog.cpp  WatchDog.h
